remove path module

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Expense Tracker</title>
+    <title>MERN Expense Tracker</title>
   </head>
   <body>
     <div id="root"></div>
